# hello

./: pyproject.toml
hello/: wor.py
hello/scripts/: say_hello.py  say_w.py
